# slides

meetings/_template/: marp-template.md
meetings/intro_reveng/: intro_reveng.md
meetings/intro_reveng/res/: x86_64_regs.drawio
meetings/pwn-bof-shellcode-rop/: pwn-bof-shellcode-rop.md
meetings/pwn-bof-shellcode-rop/figures/: convert.sh  fig1.ditaa  fig10.ditaa  fig11.ditaa  fig12.ditaa  fig13.ditaa  fig14.ditaa  fig2.ditaa  fig3.ditaa  fig4.ditaa  fig5.ditaa  fig6.ditaa  fig7.ditaa  fig8.ditaa  fig9.ditaa
meetings/pwn-bof-shellcode-rop/handson/src/: CMakeLists.txt  Dockerfile.build  chal1.c  chal3.c  chal4.c  chal5.c  chal6.c
meetings/pwn-bof-stack/: pwn-bof-stack.md
meetings/pwn-bof-stack/handson/dist32/: chal1-32  chal2-32  chal3-32  chal4-32  chal5-32
meetings/pwn-bof-stack/handson/dist64/: chal1-64  chal2-64  chal3-64  chal4-64  chal5-64
meetings/pwn-bof-stack/handson/solution-sample/: solve-chal1.py  solve-chal3.py  solve-chal4.py  solve-chal5.py
meetings/pwn-bof-stack/handson/src/: CMakeLists.txt  Makefile  README.md  chal1.c  chal2.c  chal3.c  chal4.c  chal4.lds  chal5.c  stkdbg.c  stkdbg.h
